--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,17 @@
-<h1>PhotoShare</h1>
-<%= link_to "New Post", new_post_path %>
+<div class="posts-wrapper row">
+  <% @posts.each do |post| %>
+    <div class-="post">
+      <div class="post-head">
+        <div class="name">
+          Donovan Whitworth
+        </div>
+      </div>
+      <div class="image center-block">
+        <%= link_to (image_tag post.image, class:'img-responsive'), post_path(post) %>
+      </div>
+      <p class="caption">
+        <%= post.caption %>
+      </p>
+    </div>
+  <% end %>
+</div>
