--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,15 @@
+<span>
+  <% if @user == current_user %>
+    <%= link_to 'Edit Profile', edit_profile_path(@user.user_name),
+                                class: 'btn edit-button' %>
+  <% else %>
+    <%= link_to 'Following', unfollow_user_path,
+                             remote: true,
+                             class: 'btn unfollow-button',
+                             id: 'unfollow-button',
+                             method: :post %>
+  <% end %>
+</span>
 <div class="posts-wrapper row">
   <% @posts.each do |post| %>
     <%= render 'posts/post', post: post %>
